Fix sidebar link formatting on Terms of Use.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1965 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -85,7 +85,8 @@ nav #search button:active {
 
 #plantshare #sidebar a:hover,
 #teaching-tools #sidebar a:hover,
-#privacy-policy #sidebar a:hover {
+#privacy-policy #sidebar a:hover,
+#terms-of-use #sidebar a:hover {
     text-decoration: none;
 }
 
