--- a/gobotany/simplekey/templates/simplekey/_footer.html
+++ b/gobotany/simplekey/templates/simplekey/_footer.html
@@ -20,8 +20,8 @@
                         <a href="/help/">About</a> |
                         <a href="/help/glossary/">Glossary</a></p>
                     <h6>Legal</h6>
-                    <p><a href="#">Privacy Policy</a> |
-                        <a href="#">Terms of Use</a></p>
+                    <p><a href="{% url privacy-policy %}">Privacy Policy</a> |
+                    <a href="{% url terms-of-use %}">Terms of Use</a></p>
                 </div>
 
                 <div class="three-col last">
