--- a/gobotany/simplekey/templates/simplekey/_new_base.html
+++ b/gobotany/simplekey/templates/simplekey/_new_base.html
@@ -4,7 +4,7 @@
     <head>
         <title>{% block title %}{% endblock %}{% block title_suffix %}: Go Botany{% endblock %}</title>
         <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=IE8">
+        <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=IE9">
         <link rel="shortcut icon" href="/static/images/branding/favicon.png">
     
         {# This block is for any additional meta or link elements. #}
@@ -23,8 +23,8 @@
         <link rel="stylesheet"
             href="/static/css/jquery.jscrollpane.css">
         <link rel="stylesheet" href="/static/css/smoothDivScroll.css">
-        {# TODO: If we do decide to use Chrome Frame for IE 8 and #}
-        {# below, remove these conditional styles and their code. #}
+        {# TODO: If we do decide to use Chrome Frame, remove these #}
+        {# conditional styles and their code.                      #}
         <!--[if IE 7]>
             <link rel="stylesheet" href="/static/css/ie7.css">
         <![endif]-->
@@ -38,14 +38,14 @@
         {# such as SVGWeb. #}
         {% block js_top %}{% endblock %}
 
-        {# Chrome Frame installer #}
-        <!--[if lt IE 9]>
+        {# Chrome Frame installer: IE 9 and below #}
+        <!--[if lt IE 10]>
         <script type="text/javascript"
             src="http://ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
         <![endif]-->
 
-        {# TODO: If we do decide to use Chrome Frame for IE 8 and #}
-        {# below, remove this conditional script and its code.    #}
+        {# TODO: If we do decide to use Chrome Frame, remove this #}
+        {# conditional script and its code.                       #}
         {# HTML5 fix for IE 8 and below #}
         <!--[if lt IE 9]>
         <script
@@ -64,8 +64,8 @@
 
     <body {% block body_attributes %}{% endblock %}>
 
-        {# Prompt to install Chrome Frame on IE 8 and below if needed #}
-        <!--[if lt IE 9]>
+        {# Prompt to install Chrome Frame on IE 9 and below if needed #}
+        <!--[if lt IE 10]>
         <script>
             CFInstall.check({
                 mode: "overlay"
