Fix importer bug which prevented lookalikes from appearing on species pages.
Records were being processed but not saved to the database. Added functional tests
and a CSS class for easier testing.

git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1969 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -264,7 +264,7 @@
                 </div>
 
                 {% if taxon.lookalikes.all|length > 0 %}
-                <div class="section">
+                <div class="section lookalikes">
                     <h5>Sometimes Confused With:</h5>
                     <dl>
                     {% for lookalike in taxon.lookalikes.all %}
