--- a/gobotany/simplekey/templates/simplekey/plantshare_placeholder.html
+++ b/gobotany/simplekey/templates/simplekey/plantshare_placeholder.html
@@ -24,11 +24,8 @@
                     soon!</p>
                 </div>
                 <div id="sidebar">
-                    <div class="section">
-                        {% url plantshare-placeholder as u %}
-                        <h5><a class="sidebarlink" {% ifnotequal request.path u %}href="{{ u }}"{% endifnotequal %}>PlantShare</a></h5>
-                    </div>
-                    {% block more_sidebar_content %}{% endblock %}
+                    {# Use SimpleKey until a page-specific design is created #}
+                    {% include "simplekey/_sidebar_items.html" %}
                 </div>
 
                 <div class="clearit"></div>
