--- a/gobotany/simplekey/templates/simplekey/teaching_placeholder.html
+++ b/gobotany/simplekey/templates/simplekey/teaching_placeholder.html
@@ -26,11 +26,8 @@
                     through PlantShare. Check back soon!</p>
                 </div>
                 <div id="sidebar">
-                    <div class="section">
-                        {% url teaching-tools-placeholder as u %}
-                        <h5><a class="sidebarlink" {% ifnotequal request.path u %}href="{{ u }}"{% endifnotequal %}>Teaching Tools</a></h5>
-                    </div>
-                    {% block more_sidebar_content %}{% endblock %}
+                    {# Use SimpleKey until a page-specific design is created #}
+                    {% include "simplekey/_sidebar_items.html" %}
                 </div>
 
                 <div class="clearit"></div>
