Fix urls for Full Key and Dichotomous Key links.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1996 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/advanced.html
+++ b/gobotany/simplekey/templates/simplekey/advanced.html
@@ -62,8 +62,8 @@
                         </section>
                     </div><!-- Closes .dk-landing-section -->
                     <div class="dichkey-buttons">
-                        <div><a href="#" class="go-fullkey-btn">Go To Full Key</a></div>
-                        <div><a href="dichotomous-key.php" class="go-dichkey-btn">Go To Dichotomous Key</a></div>
+                        <div><a href="{% url full-key-placeholder %}" class="go-fullkey-btn">Go To Full Key</a></div>
+                        <div><a href="{% url dich-key-placeholder %}" class="go-dichkey-btn">Go To Dichotomous Key</a></div>
                     </div><!-- .dichkey-buttons -->
                     <div class="clearit"></div>
                 </div>
