Rewrote taxon-image import to pull from S3, and updated the sorl-thumbnail tags that we use on our simple-key and pilegroup pages.  The species page is still broken; my next feat will be fixing our other uses of {% thumbnail %} in our templates, but I wanted to commit this work so far as a foothold.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@2007 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/simple.html
+++ b/gobotany/simplekey/templates/simplekey/simple.html
@@ -1,4 +1,5 @@
 {% extends "simplekey/_new_base.html" %}
+{% load thumbnail %}
 {% load simplekey_extras %}
 
 {% block title %}{{ groups_list_page.title }}{% endblock %}
@@ -36,14 +37,18 @@
                                 <div class="images">
                                     {% for pilegroup_image in pilegroup_images %}
                                         {% with pilegroup_image.content_image as i %}
+                                          {% thumbnail i.image "1000x1000" as t1 %}
                                             {% with i.creator as photographer %}
-                                            <a href="{{ i.image.extra_thumbnails.scaled.absolute_url }}"
+                                            <a href="{{ t1.url }}"
                                                 rel="shadowbox[{{ pilegroup.slug }}]"
                                                 title="{% photo_title_credit i.image_type i.content_object.scientific_name photographer %}">
-                                                <img src="{{ i.image.extra_thumbnails.large.absolute_url }}"
+                                              {% thumbnail i.image "239x239" crop="center" as t2 %}
+                                                <img src="{{ t2.url }}"
                                                     alt="{% photo_title_credit i.image_type i.content_object.scientific_name photographer %}">
+                                              {% endthumbnail %}
                                             </a>
                                             {% endwith %}
+                                          {% endthumbnail %}
                                         {% endwith %}
                                     {% endfor %}
                                 </div>
