--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -71,14 +71,18 @@
 		            <div class="scrollWrapper">
                         <div class="scrollableArea">
                             {% for i in species_images %}
+                              {% thumbnail i.image "1000x1000" as t1 %}
                                 {% with i.creator as photographer %}
-                                <a href="{{ i.image.extra_thumbnails.scaled.absolute_url }}"
+                                <a href="{{ t1.url }}"
                                     {% if forloop.counter == 1 %}id="startimage"{% endif %}
                                     title="{% photo_title_credit i.image_type scientific_name photographer %}">
-                                    <img src="{{ i.image.extra_thumbnails.large.absolute_url }}"
+                                    {% thumbnail i.image "239x239" crop="center" as t2 %}
+                                    <img src="{{ t2.url }}"
                                         alt="{% photo_title_credit i.image_type scientific_name photographer %}">
+                                    {% endthumbnail %}
                                 </a>
                                 {% endwith %}
+                              {% endthumbnail %}
                             {% endfor %}
 			            </div>
 		            </div>
