Cleaned up a few more bits of thumbnail code in various templates.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@2014 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/help_map.html
+++ b/gobotany/simplekey/templates/simplekey/help_map.html
@@ -23,7 +23,7 @@
                     <div class="img-container">
                         {% for i in group.sample_species_images.all %}
                             {% if forloop.first %}
-                                <img src="{{ i.image.thumbnail.absolute_url }}"
+                                <img src="{{ i.thumb_small.url }}"
                                     alt="{{ i.alt }}">
                             {% endif %}
                         {% endfor %}
@@ -47,7 +47,7 @@
                             <div class="img-container">
                                 {% for i in subgroup.sample_species_images.all %}
                                     {% if forloop.first %}
-                                        <img src="{{ i.image.thumbnail.absolute_url }}"
+                                        <img src="{{ i.thumb_small.url }}"
                                             alt="{{ i.alt }}">
                                     {% endif %}
                                 {% endfor %}
